# LBM

./: .clang-format  .gitignore  CMakeLists.txt  DoxyFile  README.md  compile_commands.json
include/: ProjectConfig.h.in  analytical.h  ex_3.h  export_data.h  helpers.h  lbm_core.h  main.h  pch.h  py_action.h
src/: analytical.cpp  export_data.cpp  helpers.cpp  lbm_core.cpp  main.cpp  py_action.cpp
src/course_ex/: ex_3.cpp
src/python/: ex_3.py  helpers.py  plot.py  post_processing.py  post_processing.py.in  py_action.py
